updated links to be real links and added styling

--- a/Index.html
+++ b/Index.html
@@ -12,9 +12,9 @@
         <div class="menu">
             <div class="logo">Website Logo</div>
             <div class="nav">
-                <div class="about">About</div>
-                <div class="projects">Projects</div>
-                <div class="contact">Contact</div>
+                <div class="about"><a href="#">About</a></div>
+                <div class="projects"><a href="#">Projects</a></div>
+                <div class="contact"><a href="#">Contact</a></div>
         </div>
         </div>
     </div>
